--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -39,10 +39,10 @@
         <div class="container-narrow">
           
              <a class="brand" style= "color:#302226; font-family:Times New Roman;" href="/index.html">CAIsr</a> 
-             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/publications.html">PUBLICATIONS</a>  
-	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/software.html">CODE</a>
-	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href = "/pages/imaging_tools.html">TOOLS</a> 
-             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/data_conversion.html">DATA</a> 
+             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/publications.html">Publications</a>  
+	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/software.html">Code</a>
+	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href = "/pages/imaging_tools.html">Tools</a> 
+             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/data_conversion.html">Data</a> 
              
 
 
