--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -69,9 +69,9 @@
 	  <center> <table width="550" height="85">
 			<tr>
 			<!-- <td><img src="C:/Users/isaarya/Desktop/github1.png" alt="GitHub icon" style="width:30px;height:30px"></td> -->
-			<td><a href="#"><img src="/images/github.png" alt="GitHub icon" style="width:32px;height:32px; border:0;"></a></td>
-			<td><a href="#"><img src="/images/UQ.png" alt="UQ icon" style="width:35.5px;height:30px"></a></td>
-			<td><a href="#"><img src="/images/CAIsr.png" alt="CAIsr icon" style="width:150.5px;height:70px"></a></td>
+			<td><a href="https://github.com/CAIsr/"><img src="/images/github.png" alt="GitHub icon" style="width:32px;height:32px; border:0;"></a></td>
+			<td><a href="https://cai.centre.uq.edu.au/"><img src="/images/UQ.png" alt="UQ icon" style="width:35.5px;height:30px"></a></td>
+			<td><a href="/index.html"><img src="/images/CAIsr.png" alt="CAIsr icon" style="width:150.5px;height:70px"></a></td>
 			</tr>
 			<tr>
 			<td><small>GitHub</small></td>
