--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -24,6 +24,8 @@
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+	  
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   </head>
 
@@ -38,11 +40,11 @@
       <div class="navbar-inner">
         <div class="container-narrow">
           
-             <a class="brand" style= "color:#302226; font-family:Times New Roman;" href="/index.html">CAIsr</a> 
-             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/publications.html">Publications</a>  
-	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/software.html">Code</a>
-	     <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href = "/pages/imaging_tools.html">Tools</a> 
-             <a class="brand" style= "color:#302226; font-family:Times New Roman; float; float:right;" href= "/pages/data_conversion.html">Data</a> 
+             <a class="brand" style= "color:#302226; font-family:Roboto, serif;" href="/index.html">CAIsr</a> 
+             <a class="brand" style= "color:#302226; font-family:Roboto, serif; float; float:right;" href= "/pages/publications.html">Publications</a>  
+	     <a class="brand" style= "color:#302226; font-family:Roboto, serif; float; float:right;" href= "/pages/software.html">Code</a>
+	     <a class="brand" style= "color:#302226; font-family:Roboto, serif; float; float:right;" href = "/pages/imaging_tools.html">Tools</a> 
+             <a class="brand" style= "color:#302226; font-family:Roboto, serif; float; float:right;" href= "/pages/data_conversion.html">Data</a> 
              
 
 
@@ -51,9 +53,9 @@
     </div>
 
   
-    <div class="container-narrow" style="width:75%; margin:50px auto;font-size:107%;" >
+    <div class="container-narrow" style="width:85%; margin:50px auto;font-size:107%;" >
 
-      <div class="content" style="color:#302226; line-height:2.0; font-family:Times New Roman; font-size:105%">
+      <div class="content" style="color:#302226; line-height:2.5; font-family:Roboto, serif; font-size:107%">
 	    <p >
            {{ content }}
 		</p>
@@ -69,19 +71,20 @@
 	  <center> <table width="550" height="85">
 			<tr>
 			<!-- <td><img src="C:/Users/isaarya/Desktop/github1.png" alt="GitHub icon" style="width:30px;height:30px"></td> -->
-			<td><a href="https://github.com/CAIsr/"><img src="/images/github.png" alt="GitHub icon" style="width:32px;height:32px; border:0;"></a></td>
-			<td><a href="https://cai.centre.uq.edu.au/"><img src="/images/UQ.png" alt="UQ icon" style="width:35.5px;height:30px"></a></td>
-			<td><a href="/index.html"><img src="/images/CAIsr.png" alt="CAIsr icon" style="width:150.5px;height:70px"></a></td>
+			<td><a href="https://github.com/CAIsr/"><img src="/images/github.png" alt="GitHub icon" style="width:38px;height:60px; border:0;"></a></td>
+			<td><a href="https://cai.centre.uq.edu.au/"><img src="/images/cai_logo.png" alt="UQ icon" style="width:480.5px;height:120px"></a></td>
+			<td><a href="/index.html"><img src="/images/CAIsr.png" alt="CAIsr icon" style="width:200.5px;height:90px"></a></td>
 			</tr>
 			<tr>
-			<td><small>GitHub</small></td>
-			<td><small>CAI</small></td>
+			<!-- <td><small>GitHub</small></td> -->
+			<!-- <td><small>CAI</small></td> -->
 			<!-- <td> </td>
 			<td> </td>
 			<td> </td>
 			<td> </td>
 			<td> </td> -->
-			<td ><small> Copyright@CAI_2016 </small></td>
+			<td> </td>
+			<td align="center"> Copyright@CAI_2016 </td>
 			</tr>
 			</table></center>
 			
