Added spreadsheet for syntax highlighting Using rougify GitHub theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,3 +7,6 @@ theme :
 {% if jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
+<head>
+<link rel="stylesheet" href="/assets/css/syntax.css">
+</head>
